# Vite

./: .env.example  .env.local.example  .gitignore  DEPLOY.md  README.md  XION_INTEGRATION.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/donor/: page.tsx
components/: DisputePanel.tsx  MilestoneTracker.tsx  PatientForm.tsx  PaymentReceipt.tsx  QRDisplay.tsx  QRScanner.tsx  StatusDot.tsx  SyncBadge.tsx  SyncPanel.tsx  VaccinationForm.tsx
contracts/: Cargo.toml  simple.json  test_msg.json
contracts/grant_escrow/: Cargo.toml
contracts/grant_escrow/src/: contract.rs
contracts/issuer_registry/: Cargo.toml
contracts/issuer_registry/src/: contract.rs  state.rs
contracts/milestone_checker/: Cargo.toml
contracts/milestone_checker/src/: contract.rs  error.rs  msg.rs
contracts/scripts/: deploy.cjs  deploy.ps1  deploy.sh  verify.sh
contracts/vaccination_record/: Cargo.toml
contracts/vaccination_record/src/: contract.rs  state.rs
deployments/: xion-testnet-2.json
docs/: vercel-env-setup.md
hooks/: use-toast.ts  useAuth.ts  useMounted.ts  useNotifications.ts  useOfflineStatus.ts  usePatient.ts  usePrograms.ts  useSync.ts  useXion.ts
lib/auth/: demo.ts  (+2 more)
mobile/: App.tsx  app.json  package.json
public/: manifest.json  robots.txt  xion-build-diagnostic.json
scratch/: fix_sync.py  fix_sync_panel.py
scripts/: verify-env.mjs
store/: authStore.ts  notificationStore.ts  syncStore.ts
types/: index.ts
(+148 files in other folders)
