[workspace]
members = [
  "issuer_registry",
  "vaccination_record",
  "milestone_checker",
  "grant_escrow",
]
resolver = "2"

[workspace.dependencies]
cosmwasm-std     = { version = "2.1", features = ["cosmwasm_2_0"] }
cosmwasm-schema  = "2.1"
cw-storage-plus  = "2.0"
cw2              = "2.0"
schemars         = "0.8"
serde            = { version = "1.0", features = ["derive"] }
thiserror        = "1.0"
rmp-serde        = "=1.3.0"
